[JetBrains/PHP] PhpStorm uses build number in the package

--- a/roles/extras.jetbrains/templates/phpstorm.desktop.j2
+++ b/roles/extras.jetbrains/templates/phpstorm.desktop.j2
@@ -2,8 +2,8 @@
 Version=1.0
 Type=Application
 Name=PhpStorm
-Icon=/opt/JetBrains/PhpStorm-{{ jetbrains.ruby.version }}/bin/PSlogo.svg
-Exec="/opt/JetBrains/PhpStorm-{{ jetbrains.ruby.version }}/bin/phpstorm.sh" %f
+Icon=/opt/JetBrains/PhpStorm-{{ jetbrains.php.build }}/bin/phpstorm.png
+Exec="/opt/JetBrains/PhpStorm-{{ jetbrains.php.build }}/bin/phpstorm.sh" %f
 Comment=The Drive to Develop
 Categories=Development;IDE;
 Terminal=false
