[JETBRAINS] IntelliJ-related fixes, CE support

--- a/roles/extras.jetbrains/templates/intellijc.desktop.j2
+++ b/roles/extras.jetbrains/templates/intellijc.desktop.j2
@@ -2,8 +2,8 @@
 Version=1.0
 Type=Application
 Name=IntelliJ IDEA Community Edition
-Icon=/opt/JetBrains/idea-IU-{{ jetbrains.java.build }}/bin/idea.png
-Exec="/opt/JetBrains/idea-IU-{{ jetbrains.java.build }}/bin/idea.sh" %f
+Icon=/opt/JetBrains/idea-IC-{{ jetbrains.java.build }}/bin/idea.png
+Exec="/opt/JetBrains/idea-IC-{{ jetbrains.java.build }}/bin/idea.sh" %f
 Comment=The Drive to Develop
 Categories=Development;IDE;
 Terminal=false
